--- a/.github/workflows/autorun.yml
+++ b/.github/workflows/autorun.yml
@@ -48,7 +48,7 @@ jobs:
           username: ${{ secrets.MAIL_USER }}
           password: ${{ secrets.MAIL_PASS }}
           from: ${{ secrets.MAIL_USER }}
-          to: file://cache/mail_recvs.dat
+          to: ${{ secrets.MAIL_RECV }}
           body: file://cache/mail_content.dat
           content_type: text/html
           subject: 威胁情报播报
